crates/keron-lang/tests/corpus/errors/check/for_non_iterable.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `for` expects `List<T>` or `Map<K, V>`, found `Int`
  --> 2:10
  |
2 | for x in n { reconcile x }
  |          ^
